# pipe-bot

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml  flake.nix  go.mod  main.go  mise.toml
.devcontainer/: devcontainer.json
internal/handler/: commands.go  handler.go  parser.go  parser_test.go  runner.go
internal/token/: token.go
openrc/init.d/: pipe-bot
src/: command.rs  command_reader.rs  config.rs  discord_context.rs  handler.rs  main.rs  producer.rs  tests.rs  token.rs  tokenizer.rs
systemd/system/: pipe-bot.service  pipe-bot.socket
