[package]
name = "pipe-bot"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/forrestjacobs/pipe-bot"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serenity = "0.12"
tokio = { version = "1.44", features = ["rt-multi-thread"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
