[package]
name = "pipe-bot"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/forrestjacobs/pipe-bot"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indoc = "2.0.6"
mockall = "0.14.0"
serenity = "0.12"
serial_test = "3.2.0"
tokio = { version = "1.44", features = ["rt-multi-thread"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
