[package]
name = "pipe-bot"
version = "0.2.2"
edition = "2024"
repository = "https://github.com/forrestjacobs/pipe-bot"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11.9"
indoc = "2.0.6"
log = "0.4.29"
mockall = "0.14.0"
serenity = "0.12"
tokio = { version = "1.44", features = ["io-std", "rt-multi-thread"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
